--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,11 @@ deepface
 tf-keras
 opencv-python
 dlib
-face_recognition
+torch==2.2.0  --index-url https://download.pytorch.org/whl/cpu
+torchaudio==2.2.0   --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.17.0 --index-url https://download.pytorch.org/whl/cpu
+facenet-pytorch==2.6.0 
+opencv-python==4.7.0.72
+Pillow>=10.2.0
+imutils==0.5.4
+face-alignment
